<resources>
    <string name="app_name">petdarApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tbtn_vacunacion">Vacunación</string>
    <string name="tbtn_citas">Citas</string>
    <string name="tbtn_salir">Salir</string>
    <string name="tbtn_agregarV">Agregar</string>
    <string name="ttxb_titulo">Datos de la mascota</string>
    <string name="ttxb_nombre">Nombre</string>
    <string name="ttxb_especie">Especie</string>
    <string name="ttxb_titulo2">Datos de la vacuna</string>
    <string name="ttxb_fecha">Fecha</string>
    <string name="ttxb_vacuna">Vacuna</string>
    <string name="ttxb_vacunador">Vacunador</string>
    <string name="ttxb_pfecha">Próxima vacunación</string>
    <string name="ttxb_titulo3">Sus vacunas</string>


</resources>