<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VacunaNueva">

    <Button
        android:id="@+id/btn_agregarV"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="17dp"
        android:text="@string/tbtn_agregarV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:text="Agregar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/txb_fecha_vacuna"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_above="@+id/txb_vacuna"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:text="@string/ttxb_fecha"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/txb_especie"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ttxb_especie"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txb_nombre_mascota"
        tools:text="Especie" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txb_fecha_vacuna"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        android:capitalize="none"
        android:minHeight="48dp"
        android:text="@string/ttxb_titulo2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txb_vacuna"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_above="@+id/txb_vacunador"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ttxb_vacuna"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txb_vacunador"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_above="@+id/txb_prox_fecha"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ttxb_vacunador"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txb_prox_fecha"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/ttxb_pfecha"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txb_nombre_mascota"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_above="@+id/txb_especie"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/ttxb_nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ttxb_nombre"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="147dp"
        android:text="@string/ttxb_titulo"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="89dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:src="@mipmap/icono_huella" />

</RelativeLayout>